--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,12 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_ROOT_PASSWORD=rootsecret
+DB_USERNAME=user
+DB_PASSWORD=usersecret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -56,3 +57,6 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+HOST_USER=alex
+HOST_USER_ID=501
