--- a/docker/php/local.ini
+++ b/docker/php/local.ini
@@ -3,3 +3,9 @@ date.timezone=Europe/Moscow
 upload_max_filesize = 10M
 # Must be greater than or equal to upload_max_filesize
 post_max_size = 10M
+# XDebug
+zend_extension=xdebug
+xdebug.mode=develop,debug,coverage
+xdebug.start_with_request=yes
+xdebug.client_host=host.docker.internal
+xdebug.client_port=9003
