--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
         HOST_USER: ${HOST_USER}
         HOST_USER_ID: ${HOST_USER_ID}
     restart: unless-stopped
+    environment:
+      PHP_IDE_CONFIG: "serverName=debug"
     volumes:
       - ./:/var/www
       - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
