Setup testing database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,5 +44,20 @@ services:
       - ./docker/mysql/init:/docker-entrypoint-initdb.d
       - laravel_10_mysql:/var/lib/mysql
 
+  mysql_testing:
+    container_name: mysql_testing
+    image: mysql:8.0
+    restart: unless-stopped
+    ports:
+      - 3307:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
+      MYSQL_USER: ${DB_USERNAME}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+    volumes:
+      - ./docker/mysql/conf.d:/etc/mysql/conf.d
+      - ./docker/mysql/init:/docker-entrypoint-initdb.d
+
 volumes:
   laravel_10_mysql:
